[package]
name = "solana-transfer-ledger"
version = "0.1.0"
edition = "2021"
default-run = "main"

[lib]
name = "solana_transfer_ledger"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "test_database"
path = "src/bin/test_database.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
yellowstone-grpc-client = {  version = "6.0.0" }
yellowstone-grpc-proto = {  version = "6.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bs58 = "0.5"
chrono = { version = "0.4.41", features = ["serde"] }
rocksdb = "0.21"
# Web API dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
uuid = { version = "1.0", features = ["v4", "serde"] }


[profile.dev]
opt-level = 1           # 轻量优化
debug = 1               # 减少调试信息
incremental = true      # 增量编译
codegen-units = 512     # 增加并行度
panic = "unwind"